--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,4 +1,4 @@
-.login-container {
+.signup-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -56,25 +56,7 @@ button:hover {
 }
 
 .bg-image {
-  background-image: url('../../assets/images/medicine.jpg');
+  background-image: url('../../assets/images/signup.jpg');
   background-size: cover;
   background-position: center;
 }
-
-.new-user-button {
-  padding: 5px 10px; /* Adjust padding to make the button smaller */
-  font-size: 14px; /* Adjust font size to make the text larger */
-  border: 1px solid #ccc; /* Add a border for a raised effect */
-  background-color: white;
-  color: #666;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.new-user-button:hover {
-  background-color: #9ff8b2; /* Light gray on hover */
-}
-
-
-  
-  
