[ADD] remove test configuration in public folder

--- a/frontend-angular/src/app/login/login.component.scss
+++ b/frontend-angular/src/app/login/login.component.scss
@@ -56,7 +56,7 @@ button:hover {
 }
 
 .bg-image {
-  background-image: url('../../assets/images/medicine.jpg');
+  background-image: url('src/assets/images/medicine.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -76,5 +76,4 @@ button:hover {
 }
 
 
-  
-  
+
