--- a/frontend-angular/src/app/signup/signup.component.scss
+++ b/frontend-angular/src/app/signup/signup.component.scss
@@ -56,7 +56,7 @@ button:hover {
 }
 
 .bg-image {
-  background-image: url('../../assets/images/signup.jpg');
+  background-image: url('src/assets/images/signup.jpg');
   background-size: cover;
   background-position: center;
 }
